--- a/src/style/sections/_about.scss
+++ b/src/style/sections/_about.scss
@@ -25,7 +25,7 @@
 
     &__image {
       display: flex;
-      height: 100%;
+      height: fit-content;
       align-items: center;
       justify-content: center;
 
